<resources>
    <string name="app_name">Rikkeiintern_D1_Bai5_RecycleView</string>
    <string name="contact">Contact</string>
    <string name="todo">TODO</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancer">Cancel</string>
</resources>
