<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp">

    <EditText
        android:id="@+id/etNameAdd"
        android:singleLine="true"
        android:hint="@string/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:singleLine="true"
        android:hint="@string/contact_number"
        android:id="@+id/etPhoneAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSaveAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnCancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancer"/>
    </LinearLayout>
</LinearLayout>